--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "express": "^4.21.2",
     "graphql": "^16.11.0",
     "mongodb": "5.5",
-    "mongoose": "^8.18.1",
-    "uuid": "^13.0.0"
+    "mongoose": "^8.18.1"
   }
 }
