--- a/package.json
+++ b/package.json
@@ -2,20 +2,17 @@
   "name": "task-manager-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vercel dev --listen 3000",
+    "start": "node server.js",
+    "deploy": "vercel --prod"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.13.0",
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "graphql": "^16.11.0",
-    "mongodb": "5.5",
-    "mongoose": "^8.18.1"
+    "apollo-server-micro": "^3.13.0",
+    "graphql": "^16.11.0"
   }
 }
