--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^3.13.0",
     "apollo-server-micro": "^3.13.0",
-    "graphql": "^16.11.0"
+    "dotenv": "^17.2.2",
+    "graphql": "^16.11.0",
+    "mongoose": "^8.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
